--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JavaFX.classpath}
+    ${libs.JavaFX.classpath}:\
+    ${libs.JavaFx19.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,7 +89,8 @@ run.classpath=\
 run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JavaFX.classpath}
+    ${libs.JavaFX.classpath}:\
+    ${libs.JavaFx19.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
