--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Buscaminas
 endorsed.classpath=
 excludes=
+file.reference.firmata4j-2.3.5.jar=C:\\Users\\josep\\Documents\\Arduino\\firmata4j-2.3.5.jar
+file.reference.jssc-2.9.4.jar=C:\\Users\\josep\\Documents\\Arduino\\jssc-2.9.4.jar
+file.reference.slf4j-api-1.7.3.jar=C:\\Users\\josep\\Documents\\Arduino\\slf4j-api-1.7.3.jar
+file.reference.slf4j-simple-1.6.1.jar=C:\\Users\\josep\\Documents\\Arduino\\slf4j-simple-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JavaFX.classpath}:\
-    ${libs.JavaFx19.classpath}
+    ${libs.JavaFx19.classpath}:\
+    ${file.reference.firmata4j-2.3.5.jar}:\
+    ${file.reference.jssc-2.9.4.jar}:\
+    ${file.reference.slf4j-api-1.7.3.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
