--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/Buscaminas
 endorsed.classpath=
 excludes=
 file.reference.firmata4j-2.3.5.jar=C:\\Users\\josep\\Documents\\Arduino\\firmata4j-2.3.5.jar
+file.reference.firmata4j-2.3.5.jar-1=C:\\Users\\josep\\OneDrive\\Documentos\\Arduino\\firmata4j-2.3.5.jar
 file.reference.jssc-2.9.4.jar=C:\\Users\\josep\\Documents\\Arduino\\jssc-2.9.4.jar
+file.reference.jssc-2.9.4.jar-1=C:\\Users\\josep\\OneDrive\\Documentos\\Arduino\\jssc-2.9.4.jar
 file.reference.slf4j-api-1.7.3.jar=C:\\Users\\josep\\Documents\\Arduino\\slf4j-api-1.7.3.jar
+file.reference.slf4j-api-1.7.3.jar-1=C:\\Users\\josep\\OneDrive\\Documentos\\Arduino\\slf4j-api-1.7.3.jar
 file.reference.slf4j-simple-1.6.1.jar=C:\\Users\\josep\\Documents\\Arduino\\slf4j-simple-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar-1=C:\\Users\\josep\\OneDrive\\Documentos\\Arduino\\slf4j-simple-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +51,11 @@ javac.classpath=\
     ${file.reference.firmata4j-2.3.5.jar}:\
     ${file.reference.jssc-2.9.4.jar}:\
     ${file.reference.slf4j-api-1.7.3.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.firmata4j-2.3.5.jar-1}:\
+    ${file.reference.jssc-2.9.4.jar-1}:\
+    ${file.reference.slf4j-api-1.7.3.jar-1}:\
+    ${file.reference.slf4j-simple-1.6.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
